Final rating system

--- a/templates/star_rating.html
+++ b/templates/star_rating.html
@@ -29,6 +29,7 @@
       </div>
       <div class="text-center">
         <div id="display_rating">
+          <h1>{{rating}}</h1>
           <div class="row align-items-center">
             <div class="offset-1 col-1 mt-3">
               <p style="font-size: 14px;">5</p>
